kubernetes/qa/backend-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-b
  template:
    metadata:
      labels:
        app: backend-b
    spec:
      containers:
      - name: backend-b
        image: REPLACE_WITH_QA_ACR_NAME.azurecr.io/backend-b:v1
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: backend-b
spec:
  type: ClusterIP
  selector:
    app: backend-b
  ports:
  - port: 80
    targetPort: 3002
